# lz4-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: test.yaml
lz4-sys/: Cargo.toml  build.rs
lz4-sys/src/: lib.rs
src/: decoder.rs  encoder.rs  lib.rs
src/block/: mod.rs
