[package]
name = "lz4"
license = "MIT"
version = "1.26.0"
readme = "README.md"
authors = [ "Jens Heyens <jens.heyens@ewetel.net>", "Artem V. Navrotskiy <bozaro@buzzsoft.ru>", "Patrick Marks <pmarks@gmail.com>"]
description = "Rust LZ4 bindings library."
repository = "https://github.com/10xGenomics/lz4-rs"
documentation = "https://docs.rs/lz4"
edition = "2018"

[[bin]]
name = "lz4"
test = false
doc = false

[dependencies]
libc = "0.2"
lz4-sys = { path = "lz4-sys", version = "1.10.0" }

[dev-dependencies]
rand = ">=0.7, <=0.8"
docmatic = "0.1"
